# draox-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  draox.code-workspace
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/certs/: server.crt  server.key
backend/config/: default.toml  docker.toml
backend/crates/activity-log/: Cargo.toml
backend/crates/activity-log/src/: audit.rs  lib.rs  logger.rs  metrics.rs  percentiles.rs  query.rs  sinks.rs  time_series.rs
backend/crates/admin-api/: Cargo.toml
backend/crates/admin-api/src/: auth.rs  auth_store.rs  error.rs  lib.rs  response.rs  seed.rs  server.rs  state.rs  trace_context.rs
backend/crates/billing/: Cargo.toml
backend/crates/billing/src/: enforcement.rs  lib.rs  plans.rs  usage.rs
backend/crates/cache-layer/: Cargo.toml
backend/crates/cache-layer/src/: backend.rs  error.rs  keys.rs  lib.rs  memory.rs  patterns.rs  redis.rs  serialization.rs
backend/crates/connection-manager/: Cargo.toml
backend/crates/connection-manager/src/: authority.rs  failover.rs  handler.rs  handoff.rs  heartbeat.rs  heartbeat_manager.rs  lib.rs  manager.rs  session.rs  session_auth.rs  session_rate_limit.rs
backend/crates/data-store/: Cargo.toml
backend/crates/data-store/src/: backend.rs  error.rs  lib.rs  mongodb.rs  mysql.rs  postgres.rs  routing.rs  schema.rs  sqlite.rs  transaction.rs
backend/crates/draox-macros/: Cargo.toml
backend/crates/draox-macros/src/: lib.rs
backend/crates/draox-server/: Cargo.toml
backend/crates/draox-server/src/: main.rs
backend/crates/feature-flags/: Cargo.toml
backend/crates/feature-flags/src/: evaluator.rs  flag.rs  lib.rs  manager.rs
backend/crates/graphql-api/: Cargo.toml
backend/crates/graphql-api/src/: context.rs  lib.rs  mutation.rs  query.rs  server.rs  subscription.rs
backend/crates/grpc-api/: Cargo.toml  build.rs
backend/crates/grpc-api/src/: interceptor.rs  lib.rs  server.rs  state.rs
backend/crates/i18n/: Cargo.toml
backend/crates/i18n/src/: detector.rs  lib.rs  locale.rs  manager.rs  template.rs
backend/crates/otel-layer/: Cargo.toml
backend/crates/otel-layer/src/: config.rs  lib.rs  metrics.rs  middleware.rs  tracer.rs
backend/crates/plugin-clans/: Cargo.toml
backend/crates/plugin-clans/src/: alliances.rs  api_routes.rs  channels.rs  clan.rs  db_schema.rs  divisions.rs  events.rs  http_api.rs  invites.rs  lib.rs  manager.rs  manifest.rs  plugin.rs
backend/crates/plugin-cluster/: Cargo.toml
backend/crates/plugin-cluster/src/: leader.rs  lib.rs  node.rs  pubsub.rs  registry.rs  sticky.rs
backend/crates/plugin-e2ee/: Cargo.toml
backend/crates/plugin-e2ee/src/: keypair.rs  lib.rs  manager.rs  plugin.rs  ratchet.rs  session.rs
backend/crates/plugin-host/: Cargo.toml
backend/crates/plugin-host/src/: context_builder.rs  dependency_graph.rs  dir_watcher.rs  handles.rs  lib.rs  lifecycle.rs  loader.rs  marketplace.rs  marketplace_client.rs  marketplace_registry.rs  marketplace_types.rs  package.rs  permissions.rs  registry.rs  route_registry.rs  signature.rs  state_persistence.rs  update_checker.rs  version_resolver.rs  ws_dispatcher.rs
backend/crates/plugin-identity/: Cargo.toml
backend/crates/plugin-identity/src/: device.rs  lib.rs  manager.rs  mfa.rs  oauth.rs  password.rs  session.rs  token.rs  types.rs
backend/crates/plugin-jobs/: Cargo.toml
backend/crates/plugin-jobs/src/: dlq.rs  job.rs  lib.rs  manager.rs  queue.rs  retry.rs  scheduler.rs  worker.rs
backend/crates/plugin-messaging/: Cargo.toml
backend/crates/plugin-messaging/src/: channel.rs  db_schema.rs  delivery.rs  events.rs  files.rs  http_api.rs  lib.rs  manifest.rs  message.rs  moderation.rs  offline_queue.rs  plugin.rs  presence.rs  receipts.rs  store.rs  typing.rs  ws_actions.rs
backend/crates/plugin-presence/: Cargo.toml
backend/crates/plugin-presence/src/: auto_away.rs  broadcast.rs  lib.rs  manager.rs  status.rs
backend/crates/plugin-push/: Cargo.toml
backend/crates/plugin-push/src/: apns.rs  fcm.rs  lib.rs  manager.rs  preferences.rs  provider.rs  registry.rs
backend/crates/plugin-sdk/: Cargo.toml
backend/crates/plugin-sdk/src/: context.rs  identity.rs  ipc.rs  lib.rs  manifest.rs  traits.rs
backend/crates/plugin-storage/: Cargo.toml
backend/crates/plugin-storage/src/: lib.rs  manager.rs  presigned.rs  provider.rs  quota.rs  s3.rs
backend/crates/secrets-manager/: Cargo.toml
backend/crates/secrets-manager/src/: aws.rs  azure.rs  encryption.rs  lib.rs  manager.rs  provider.rs  rotation.rs  vault.rs
backend/crates/server-config/: Cargo.toml
backend/crates/server-config/src/: lib.rs  loader.rs  model.rs  validation.rs  watcher.rs
backend/crates/server-core/: Cargo.toml
backend/crates/server-core/src/: error.rs  event.rs  lib.rs  types.rs
backend/crates/socket-server/: Cargo.toml
backend/crates/socket-server/src/: backpressure.rs  bandwidth.rs  compression.rs  handler.rs  http.rs  lib.rs  listener.rs  net_metrics.rs  quic.rs  sse.rs  tcp.rs  tls.rs  tracker.rs  udp.rs  ws.rs  ws_dispatch.rs  ws_rooms.rs
backend/crates/traffic-guard/: Cargo.toml
backend/crates/traffic-guard/src/: adaptive.rs  auth_failure.rs  ban_manager.rs  behavioral.rs  circuit_breaker.rs  concurrent_connections.rs  guard.rs  guard_metrics.rs  ip_filter.rs  lib.rs  protocol_guards.rs  rate_limiter.rs  reputation.rs  subnet_limiter.rs  syn_tracker.rs  verdict.rs
backend/deploy/linux/: draox-server.env  draox-server.service  install.sh  logrotate.conf  uninstall.sh
backend/deploy/linux/deb-scripts/: postinst  postrm  prerm
backend/deploy/windows/: README.md
backend/deploy/windows/config/: default.toml
backend/deploy/windows/scripts/: install-service.ps1  manage-firewall.ps1  uninstall-service.ps1
backend/proto/: draox.proto
backend/tools/: SDK_REPORT.md
backend/tools/draox-web-demo/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
backend/tools/sdk-gen/: Cargo.toml
backend/tools/sdk-ts/: README.md
backend/tools/sdk-web/: package.json  tsconfig.json
backend/tools/sdk-wpf/: README.md
(+215 files in other folders)
