[package]
name = "cache-layer"
description = "Redis + in-memory caching layer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
server-core.workspace = true
server-config.workspace = true
moka.workspace = true
fred.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
rmp-serde.workspace = true
