[package]
name = "draox-macros"
description = "Procedural macros for the Draox Server plugin system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn = { workspace = true, features = ["full"] }
proc-macro2.workspace = true
