[package]
name = "grpc-api"
version.workspace = true
edition.workspace = true

[dependencies]
tonic          = { workspace = true }
prost          = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { version = "0.1", features = ["sync"] }
async-trait    = { workspace = true }
tracing        = { workspace = true }
serde_json     = { workspace = true }
futures-util   = { workspace = true }
chrono         = { workspace = true }
uuid           = { workspace = true }
server-core    = { workspace = true }
server-config  = { workspace = true }
connection-manager = { workspace = true }
plugin-host    = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
protox      = "0.7"
