[package]
name = "i18n"
description = "Internationalization: locale detection, message catalogs, and template substitution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true

[dev-dependencies]
