[package]
name = "otel-layer"
description = "OpenTelemetry distributed tracing, metrics, and trace propagation for Draox Server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
server-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
tonic.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
