[package]
name = "plugin-e2ee"
description = "End-to-end encryption for Draox Server direct messages (X25519 + Double Ratchet)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
server-core.workspace = true
plugin-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["sync"] }
dashmap.workspace = true
rand.workspace = true
base64.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
