[package]
name = "plugin-host"
description = "Plugin lifecycle management, WASM sandbox, marketplace client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
server-core.workspace = true
server-config.workspace = true
plugin-sdk.workspace = true
cache-layer.workspace = true
dashmap.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
notify.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tempfile.workspace = true
