[package]
name = "plugin-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
server-core = { workspace = true }
plugin-sdk = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }

# Password hashing
argon2 = "0.5"

# JWT
jsonwebtoken = { workspace = true }

# TOTP (MFA)
totp-rs = { version = "5", features = ["gen_secret", "qr"] }

# Base32/Base64 for secrets
base32 = "0.4"
base64 = "0.22"

# Token hashing
sha2 = "0.10"
hex = "0.4"

# Cryptographic random
rand = "0.8"

# OAuth2
oauth2 = "4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
