[package]
name = "plugin-sdk"
description = "Plugin developer API, traits, types, and macros for Draox Server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
server-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["sync"] }
async-trait.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
