[package]
name = "secrets-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
server-core = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }

# HTTP client for Vault/AWS/Azure API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Encryption at rest (AES-256-GCM)
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
