[package]
name = "server-config"
description = "Configuration loading, validation, and hot-reload for Draox Server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
server-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "macros"] }
notify.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
