[package]
name = "sdk-gen"
description = "Client SDK code generator — parses OpenAPI spec and emits TypeScript/Dart/Swift/Kotlin clients"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sdk-gen"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
openapiv3.workspace = true
indexmap.workspace = true
heck.workspace = true
anyhow.workspace = true
